--- a/form.html
+++ b/form.html
@@ -2,16 +2,31 @@
 <head>
     <title>Login Form</title>
 <style>
-    .form-group {
+    .form-group{
         margin-bottom: 15px;
     }
-    label {
-        display: inline-block;
+    label{
+        display: inline;
         width: 100px;
     }
     input, button {
         padding: 5px;
     }
+    body{
+        font-family: arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #f4f4f4;
+        flex-direction: column;
+        text-align: center;
+        
+    }
+
+
+
+
 
 </style>
 
