--- a/form.html
+++ b/form.html
@@ -4,7 +4,10 @@
 <style>
     .form-group{
         margin-bottom: 15px;
+    
     }
+  
+
     label{
         display: inline;
         width: 100px;
@@ -18,11 +21,12 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-color: #f4f4f4;
+        background-color: #9189bb;
         flex-direction: column;
         text-align: center;
         
     }
+
 
 
 
