--- a/form.html
+++ b/form.html
@@ -21,12 +21,11 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-color: #9189bb;
+        background-image: url('/memes-feliz-noche.gif');
         flex-direction: column;
         text-align: center;
         
     }
-
 
 
 
