--- a/loginform.html
+++ b/loginform.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
         body{
             background-color: #dfdfdf;
             font-family: Arial, Helvetica, sans-serif;
@@ -13,8 +18,102 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-
         }
+        .login-box{
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            width: 440px;
+            height: 480px;
+            padding: 30px;
+        }
+        .login-header{
+            text-align:center ;
+            margin: 20px 0 40px 0;
+        }
+        .login-header header{
+            color: #333;
+            font-size: 30px;
+            font-weight: 600;
+        }
+        .input-group .input-field{
+            width: 100%;
+            height: 60px;
+            font-size: 17px;
+            padding: 0 25px;
+            margin-bottom: 15px;
+            border-radius: 30px;
+            border: none;
+            box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.1);
+            outline: none;
+            transition: .3s;
+        }
+        ::placeholder{
+            font-weight: 500;
+            color: #222;
+        }
+        .input-field:focus{
+            width: 105%;
+        }
+        .forgot{
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 40px;
+        }
+        section{
+            display: flex;
+            align-items: center;
+            font-size: 14px;
+            color: #555;
+        }
+        #check{
+            margin-right: 10px;
+        }
+        a{
+            text-decoration: none;
+        }
+        a:hover{
+            text-decoration: underline;
+        }
+        section a{
+            color: #555;
+        }
+        .input-submit{
+            position: relative;
+        }
+        .submit-btn{
+            width: 100%;
+            height: 60px;
+            border-radius: 30px;
+            background: #222;
+            border: none;
+            cursor: pointer;
+            transition: .3s;
+        }
+        .input-submit label{
+            position: absolute;
+            top: 45%;
+            left: 50%;
+            color: #fff;
+            -webkit-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+            cursor: pointer;
+        }
+        .submit-btn:hover{
+            background: #000;
+            transform: scale(1.05,1);
+        }
+        .sign-up-link{
+            text-align: center;
+            font-size: 15px;
+            margin-top: 20px;
+        }
+        .sign-up-link a{
+            color: #000;
+            font-weight: 600;
+        }
+       
     
 
 
@@ -27,10 +126,10 @@
     </div>
 
         <div class="input-group">
-            <input type="text" name="username" id="username" placeholder="Username"> 
+            <input type="text" class="input-field" name="username" id="username" placeholder="Username"> 
         </div>
         <div class="input-group">
-            <input type="password" name="password" id="password" placeholder="Password">
+            <input type="password" class="input-field" name="password" id="password" placeholder="Password">
         </div>
         <div class="forgot">
             <section>
@@ -41,8 +140,8 @@
                 <a href="#">Forgot Password</a>
             </section>
         </div>
-        <div class="submit">
-            <button class="submit-btm" id="submit"></button>
+        <div class="input-submit">
+            <button class="submit-btn" id="submit"></button>
             <label for="submit">Sign In</label>
         </div>
         <div class="sign-up-link">
