--- a/loginform.html
+++ b/loginform.html
@@ -122,7 +122,7 @@
 <body>
   <div class="Login-box">
     <div class="login-header">
-        <header>Login</header>
+        <header>Sign In</header>
     </div>
 
         <div class="input-group">
